{{$NEXT}}

0.000104  2018-03-05 09:27:44-08:00 America/Los_Angeles

    - Add Data::Dumper to dep list (#154)

0.000103  2018-03-02 13:00:54-08:00 America/Los_Angeles (TRIAL RELEASE)

    - AsyncSubtest now works with UUIDs and adds other proper meta-data

0.000102  2018-03-02 09:45:27-08:00 America/Los_Angeles

    - No Changes since last trial

0.000101  2018-02-21 16:27:18-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Add much needed verbosity to 'You must attach to an AsyncSubtest ...' errors
    - Documentation updates

0.000100  2018-02-13 21:41:30-08:00 America/Los_Angeles

    - No changes from last TRIAL

0.000099  2018-02-06 12:53:16-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix AsyncSubtest plan to be at the right nesting, and buffered

0.000098  2018-02-06 12:05:28-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix AsyncSubtest main event buffered/nesting values
    - Fix bug where AsyncSub test vanishes with no error when finished after
      its parent ends.

0.000097  2017-12-10 20:23:21-08:00 America/Los_Angeles

    - Documentation fixes

0.000096  2017-12-09 10:13:21-08:00 America/Los_Angeles

    - No changes since last trial

0.000095  2017-12-08 14:14:16-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Discoruage use of fragile thread features (rarely used)
    - Skip fragile/discrouaged tests outside author testing.
    - Document the above, and an env var to activate tests when desired

0.000094  2017-11-29 18:51:54-08:00 America/Los_Angeles

    - No Changes since last trial

0.000093  2017-11-28 20:21:09-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Minor test changes for thread safety

0.000092  2017-11-28 10:17:37-08:00 America/Los_Angeles

    - No changes since last trial

0.000091  2017-11-27 14:17:00-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Remove experiments from last several trials

0.000090  2017-11-26 18:52:06-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix potential infinite hang in temp debugging
